--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
     <body class="page">
         <header class="header">
-            <img class="header__logo" src="./images/header-logo.svg">
+            <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <div class="header__lang-links">
                 <a class="header__lang-link header__lang-link_status_active" href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
@@ -19,7 +19,7 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
-                <img class="lead__image" src="./images/lead-polka.jpg">
+                <img class="lead__image" src="./images/lead-polka.jpg" alt="Картинка">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
 
@@ -36,18 +36,18 @@
             </section>
 
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/photo-grid-train.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg">
-                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg">
+                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Картинка">
             </section>
 
             <section class="places">
@@ -57,7 +57,7 @@
                         <h5 class="place__url-heading">URL</h5>
                         <a class="place__url-link" href="http://park-kosa.ru">park-kosa.ru</a>
                     </div>
-                    <img class="place__image" src="./images/place-kosa.jpg">
+                    <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка">
                     <div>
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
                         <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -69,7 +69,7 @@
                         <h5 class="place__url-heading">URL</h5>
                         <a class="place__url-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
-                    <img class="place__image" src="./images/place-kolsky.jpg">
+                    <img class="place__image" src="./images/place-kolsky.jpg" alt="Картинка">
                     <div>
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, 
                             от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -83,7 +83,7 @@
                         <h5 class="place__url-heading">URL</h5>
                         <a class="place__url-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
-                    <img class="place__image" src="./images/place-altai.jpg">
+                    <img class="place__image" src="./images/place-altai.jpg" alt="Картинка">
                     <div>
                         <p class="place__paragraph">Алтай — одно из красивейших мест 
                             в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. 
@@ -97,7 +97,7 @@
                         <h5 class="place__url-heading">URL</h5>
                         <a class="place__url-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
-                    <img class="place__image" src="./images/place-winter-baikal.jpg">
+                    <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Картинка">
                     <div>
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
                         <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, 
@@ -110,7 +110,7 @@
                         <h5 class="place__url-heading">URL</h5>
                         <a class="place__url-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                     </div>
-                    <img class="place__image" src="./images/place-karelia.jpg">
+                    <img class="place__image" src="./images/place-karelia.jpg" alt="Картинка">
                     <p class="place__paragraph">Сибирь заканчивается не на Урале, 
                         а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает 
                         на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. 
@@ -128,7 +128,8 @@
             <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
             <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
             <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>                <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
             <p class="footer__copyright">© 2021. Можевикин Матвей</p>
         </footer>
     </body>
