--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
                 </div>
             </section>
             <section class="cover">
-                <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
-                <a class="cover__subtitle" href="https://stampsy.com/na-elektrichkakh-do-baikala">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</a>
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay"></a>
+                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                    <div class="cover__overlay"></div>
+                    <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                </a>
             </section>
         </main>
 
