--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
         <header class="header">
             <img class="header__logo" src="./images/header-logo.svg" alt="Логотип">
             <div class="header__lang-links">
-                <a class="header__lang-link header__lang-link_status_active" href="#">Ru</a>
+                <a class="header__lang-link header__lang-link_active" href="#">Ru</a>
                 <a class="header__lang-link" href="#">En</a>
             </div>
         </header>
         <main class="content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
-                <h3 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h3>
+                <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
                 <img class="lead__image" src="./images/lead-polka.jpg" alt="Картинка">
                 <p class="lead__caption">ваша полка — верхняя</p>
             </section>
@@ -36,25 +36,25 @@
             </section>
 
             <section class="photo-grid">
-                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Картинка">
-                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Картинка">
+                <img class="photo-grid__item" src="./images/photo-grid-train.jpg" alt="Поезда">
+                <img class="photo-grid__item" src="./images/photo-grid-atharva-tulsi.jpg" alt="Горы с облаками">
+                <img class="photo-grid__item" src="./images/photo-grid-tuman.jpg" alt="Туман">
+                <img class="photo-grid__item" src="./images/photo-grid-sochi.jpg" alt="Сочи">
+                <img class="photo-grid__item" src="./images/photo-grid-arisa.jpg" alt="Колесо на льду">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal.jpg" alt="Берег Байкала">
+                <img class="photo-grid__item" src="./images/photo-grid-elbrus.jpg" alt="Эльбрус">
+                <img class="photo-grid__item" src="./images/photo-grid-kondratiev.jpg" alt="Дорожный знак">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-1.jpg" alt="Камчатка вблизи">
+                <img class="photo-grid__item" src="./images/photo-grid-kamchatka-2.jpg" alt="Камчатка издалека">
+                <img class="photo-grid__item" src="./images/photo-grid-baikal-2.jpg" alt="Байкал">
+                <img class="photo-grid__item" src="./images/photo-grid-ergaki.jpg" alt="Облака между горами">
             </section>
 
             <section class="places">
                 <div class="place">
-                    <h3 class="place__title">Куршская коса</h3>
+                    <h2 class="place__title">Куршская коса</h2>
                     <div class="place__website">
-                        <h5 class="place__url-heading">URL</h5>
+                        <h3 class="place__url-heading">URL</h3>
                         <a class="place__url-link" href="http://park-kosa.ru">park-kosa.ru</a>
                     </div>
                     <img class="place__image" src="./images/place-kosa.jpg" alt="Картинка">
@@ -64,9 +64,9 @@
                     </div>
                 </div>
                 <div class="place">
-                    <h3 class="place__title">Кольский</h3>
+                    <h2 class="place__title">Кольский</h2>
                     <div class="place__website">
-                        <h5 class="place__url-heading">URL</h5>
+                        <h3 class="place__url-heading">URL</h3>
                         <a class="place__url-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
                     </div>
                     <img class="place__image" src="./images/place-kolsky.jpg" alt="Картинка">
@@ -78,9 +78,9 @@
                     </div>
                 </div>
                 <div class="place">
-                    <h3 class="place__title">Алтай</h3>
+                    <h2 class="place__title">Алтай</h2>
                     <div class="place__website">
-                        <h5 class="place__url-heading">URL</h5>
+                        <h3 class="place__url-heading">URL</h3>
                         <a class="place__url-link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
                     </div>
                     <img class="place__image" src="./images/place-altai.jpg" alt="Картинка">
@@ -92,9 +92,9 @@
                     </div>
                 </div>
                 <div class="place">
-                    <h3 class="place__title">Зимний Байкал</h3>
+                    <h2 class="place__title">Зимний Байкал</h2>
                     <div class="place__website">
-                        <h5 class="place__url-heading">URL</h5>
+                        <h3 class="place__url-heading">URL</h3>
                         <a class="place__url-link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
                     </div>
                     <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Картинка">
@@ -105,9 +105,9 @@
                     </div>
                 </div>
                 <div class="place">
-                    <h3 class="place__title">Карелия</h3>
+                    <h2 class="place__title">Карелия</h2>
                     <div class="place__website">
-                        <h5 class="place__url-heading">URL</h5>
+                        <h3 class="place__url-heading">URL</h3>
                         <a class="place__url-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
                     </div>
                     <img class="place__image" src="./images/place-karelia.jpg" alt="Картинка">
@@ -127,11 +127,13 @@
         </main>
 
         <footer class="footer">
-            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+            <nav class="footer__nav">
+                <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+                <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+                <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+                <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+                <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+            </nav>
             <p class="footer__copyright">© 2021. Можевикин Матвей</p>
         </footer>
     </body>
